# cai-dr2-clustering-products

./: .gitignore  README.md  pyproject.toml  test_auw_grid_synthetic.py
bao/: README.md  __init__.py  fitting_tools.py  run_fit.py  tools.py
bao/job_scripts/: data_dr2.py  data_dr2_bao.py  data_dr3.py  mocks_dr2.py
bao/nb/: data_splits.ipynb  example_read_chains.ipynb
clustering_statistics/: README.md  __init__.py  box_tools.py  catalog_blinding.py  compute_box_stats.py  compute_stats.py  correlation2_tools.py  correlation3_tools.py  density_tools.py  fiducial_likelihoods_v2.py  plotting_tools.py  recon_tools.py  spectrum2_tools.py  spectrum3_tools.py  systematic_templates.py  tools.py
clustering_statistics/catalog_blinding/: __init__.py  bao.py  cli.py  diagnostics.py  fnl.py  lss_catalogs.py  rsd.py
clustering_statistics/fits/: README.md  cutsky_data_tools.py  fit_pk_bk_eft.py  fit_pk_eft.py
clustering_statistics/helper_scripts/: available_measurements.csv  convert_rascalc.py  dubious_glam-uchuu-v2-altmtl.txt  (+9 more)
cosmo/: README.md  __init__.py  cobaya.py
dr2_2pt/: jax-pkrun.py
full_shape/: box_tools.py  check_fiducial_setup.py  compute_fiducial_stats.py  correlation2_tools.py  fiducial_likelihoods.py  fit_cutsky.py  recon_tools.py  run_fit.py  spectrum2_tools.py  spectrum3_tools.py  tools.py
local_png/: README.md  check_binning.ipynb  check_mocks.ipynb  ec_style.mplstyle  effective_redshift_volume.ipynb  fit_fnl_data.ipynb  fit_fnl_mocks.ipynb  fit_fnl_pngunit-xl.ipynb  imaging_systematics.ipynb  integral_constraints.py  integral_constraints_contribution.ipynb  tools.py  validation_data_blinded.ipynb  validation_mocks.ipynb  validation_window.ipynb
nb/: read_clustering.ipynb  read_clustering_catalog.ipynb
(+168 files in other folders)
